--- a/index.html
+++ b/index.html
@@ -19,12 +19,21 @@
         /* BIO STYLES */
         .bio-box {
             border: 1px solid #000;
+            font-size: 1em;
             width: 50%;
+        }
+
+        .bio-copy {
+            font-size: 1em;
         }
 
         .bio-copy a {
             color: rgb(0, 255, 0);
         } 
+
+        .bio-wrapper {
+            font-size: 24px;
+        }
         
     </style>
 </head>
