--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
             color: rgb(255, 0, 0);
         }
 
+        html, body {
+            margin: 0;
+            padding: 0;
+        }
+
+        h1 {
+            font-size: 7vw;
+            margin-top: 0;
+        }
+
         /* SOCIAL STYLES */
         .social-link {
             background: rgba(150, 150, 150, 0.5);
@@ -17,10 +27,18 @@
         }
 
         /* BIO STYLES */
+        .bio-wrapper {
+            font-size: 24px;
+        }
+        
         .bio-box {
             border: 1px solid #000;
-            font-size: 1em;
+            font-size: 1rem;
             width: 50%;
+        }
+
+        .bio-box h3 {
+            font-size: 1.5em;
         }
 
         .bio-copy {
@@ -31,26 +49,29 @@
             color: rgb(0, 255, 0);
         } 
 
-        .bio-wrapper {
-            font-size: 24px;
+        /* HERO STYLES */
+        .full-hero {
+            background-color: #c7dbfc;
+            height: 50vh;
         }
-        
     </style>
 </head>
 <body>
-    <h1>I'm an h1</h1>
+    <div class="full-hero hero-home">
+        <h1>I'm an h1</h1>
 
-    <ul>
-        <li>
-            <a href="https://www.example.com/">Link</a>
-        </li>
-        <li>
-            <a href="https://www.example.com/">Link</a>
-        </li>
-        <li>
-            <a href="https://www.example.com/">Link</a>
-        </li>
-    </ul>
+        <ul>
+            <li>
+                <a href="https://www.example.com/" class="social-link">Link</a>
+            </li>
+            <li>
+                <a href="https://www.example.com/" class="social-link">Link</a>
+            </li>
+            <li>
+                <a href="https://www.example.com/" class="social-link">Link</a>
+            </li>
+        </ul>
+    </div>
 
     <h2>I'm an h2</h2>
     <div class="bio-wrapper">
