--- a/index.html
+++ b/index.html
@@ -23,10 +23,20 @@
         /* SOCIAL STYLES */
         .social-link {
             background: rgba(150, 150, 150, 0.5);
-            color: rgb(0, 0, 255);
+            border-radius: 99px;
+            box-sizing: border-box;
+            color: #fff;
             display: inline-block;
-            height: 36px;
-            width: 36px;
+            font-family: Helvetica, Arial, sans-serif;
+            font-size: 1em;
+            font-weight: bold;
+            height: 2.5em;
+            line-height: 1;
+            padding-top: 0.85em;
+            text-align: center;
+            text-decoration: none;
+            vertical-align: middle;
+            width: 2.5em;
         }
 
         .social-list {
@@ -37,11 +47,14 @@
 
         .social-list > li {
             display: inline-block;
+            margin: 0 0.5em;
         }
 
         /* BIO STYLES */
         .bio-wrapper {
             font-size: 24px;
+            margin: 0 auto 60px;
+            max-width: 960px;
             overflow: hidden;
         }
         
@@ -65,7 +78,14 @@
         }
 
         .bio-box h3 {
+            color: #fff;
             font-size: 1.5em;
+            margin: -40px 0 1em;
+            text-align: center;
+        }
+
+        .bio-box img {
+            width: 100%;
         }
 
         .bio-copy {
@@ -93,13 +113,13 @@
 
         <ul class="social-list">
             <li>
-                <a href="https://www.example.com/" class="social-link">Link1</a>
+                <a href="https://www.example.com/" class="social-link">Fb</a>
             </li>
             <li>
-                <a href="https://www.example.com/" class="social-link">Link2</a>
+                <a href="https://www.example.com/" class="social-link">Tw</a>
             </li>
             <li>
-                <a href="https://www.example.com/" class="social-link">Link3</a>
+                <a href="https://www.example.com/" class="social-link">Gh</a>
             </li>
         </ul>
     </div>
@@ -108,8 +128,9 @@
 
     <div class="bio-wrapper">
         <div class="bio-box">
+            <img src="https://placekitten.com/g/400/400" alt="kitten">
             <h3>Michael Hartl</h3>
-            <a href="https://twitter.com/mhartl" class="social-link">here</a>
+            <a href="https://twitter.com/mhartl" class="social-link">Tw</a>
             <div class="bio-copy">
                 <p>
                     Known for his dazzling charm, rapier wit, and unrivaled humility, Michael is the creator of the <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> and principal author of the <a href="https://learnenough.com/">Learn Enough to Be Dangerous</a> introductory sequence.
@@ -119,8 +140,9 @@
         </div>
 
         <div class="bio-box">
+            <img src="https://placekitten.com/g/400/400" alt="kitten">
             <h3>Lee Donahoe</h3>
-            <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
+            <a href="https://twitter.com/leedonahoe" class="social-link">Tw</a>
             <div class="bio-copy">
                 <p>
                     When he's not literally swimming with sharks or hunting powder stashes on his snowboard, you can find Lee in front of his computer designing interfaces, doing front-end development, or writing some of the interface-related Learn Enough tutorials.
@@ -129,8 +151,9 @@
         </div>
 
         <div class="bio-box">
+            <img src="https://placekitten.com/g/400/400" alt="kitten">
             <h3>Nick Merwin</h3>
-            <a href="https://twitter.com/nickmerwin" class="social-link">here</a>
+            <a href="https://twitter.com/nickmerwin" class="social-link">Tw</a>
             <div class="bio-copy">
                 <p>
                     You may have seen him shredding guitar live with Capital Cities on Jimmy Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true nerd at heart. He's just as happy shredding well-spec'd lines of code from a tour bus as he is from his kitchen table.
@@ -139,6 +162,7 @@
         </div>
 
         <div class="bio-box">
+            <img src="https://placekitten.com/g/400/400" alt="kitten">
             <h3>??</h3>
             <p>
                 The Future
