--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         /* GLOBAL STYLES */
         a {
-            color: rgb(255, 0, 0);
+            color: #f00;
         }
 
         html, body {
@@ -20,6 +20,12 @@
             margin-top: 0;
         }
 
+        /* HERO STYLES */
+        .full-hero {
+            background-color: #c7dbfc;
+            height: 50vh;
+        }
+
         /* SOCIAL STYLES */
         .social-link {
             background: rgba(150, 150, 150, 0.5);
@@ -28,7 +34,7 @@
             color: #fff;
             display: inline-block;
             font-family: Helvetica, Arial, sans-serif;
-            font-size: 1em;
+            font-size: 1rem;
             font-weight: bold;
             height: 2.5em;
             line-height: 1;
@@ -53,27 +59,19 @@
         /* BIO STYLES */
         .bio-wrapper {
             font-size: 24px;
-            margin: 0 auto 60px;
+            margin: auto;
             max-width: 960px;
             overflow: hidden;
-        }
-        
-        .bio-wrapper::after {
-            visibility: hidden;
-            display: block;
-            font-size: 0;
-            content: " ";
-            clear: both;
-            height: 0;
         }
 
         .bio-box {
             border: 1px solid #000;
+            border-color: transparent black black transparent;
             box-sizing: border-box;
             float: left;
             font-size: 1rem;
             margin: 40px 1% 0;
-            padding: 2%;
+            padding: 0 2% 2%;
             width: 23%; 
         }
 
@@ -90,21 +88,14 @@
 
         .bio-copy {
             font-size: 1em;
+            line-height: 1.5;
         }
 
         .bio-copy a {
             color: rgb(0, 255, 0);
         } 
 
-        /* HERO STYLES */
-        .full-hero {
-            background-color: #c7dbfc;
-            height: 50vh;
-        }
-
-        .full-hero li {
-            display: inline;
-        }
+        
     </style>
 </head>
 <body>
